@@ -24,7 +24,7 @@
     </tr>
     <tr>
       <th>Latest Old Stable 3.9.X Release</th>
-      <td><a href="v3.9.6.html">v3.9.6</a></td>
+      <td><a href="v3.9.7.html">v3.9.7</a></td>
     </tr>
     <tr>
       <th>Master Download Site</th>
